--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: "pip"
+          #cache: "pip"
 
       - name: Install streamrip
         run: pip install git+https://github.com/nathom/streamrip.git@dev
