--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
         run: pip install git+https://github.com/nathom/streamrip.git@dev
 
       - name: config
-        run: rip --help config
-
-      - name: config
         run: rip config
+
+      - name: cat config
+        run: cat .config/streamrip/config.toml
       
       #- name: Rip
         #run: rip url ${{ github.event.inputs.url }}
