--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Rip
         run: |
           rip config
-          echo "${{ secrets.STREAMRIP_CONFIG }}" | base64 --decode > .config/streamrip/config.toml
+          echo "${{ secrets.STREAMRIP_CONFIG }}" | base64 --decode > /home/runner/.config/streamrip/config.toml
           rip url ${{ github.event.inputs.url }}
