--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,5 @@ jobs:
         run: |
           rip config
           echo "${{ secrets.STREAMRIP_CONFIG }}" | base64 --decode > /home/runner/.config/streamrip/config.toml
-          rip url ${{ github.event.inputs.url }} --no-interaction
+          rip url --help
+          rip url "${{ github.event.inputs.url }}"
